--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: "[inaudible mumbling]"
-author: coin3x
+author:
+  name: coin3x
 description: >- # this means to ignore newlines until "baseurl:"
   Drench in what produced by my low proficiency in English
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -29,6 +30,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 remote_theme: jekyll/minima
 minima:
   skin: dark
+  social_links:
+    github: coin3x
 plugins:
   - jekyll-feed
 
