--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: "[inaudible mumbling]"
 author:
   name: coin3x
-description: >- # this means to ignore newlines until "baseurl:"
-  Drench in what produced by my low proficiency in English
+#description: >- # this means to ignore newlines until "baseurl:"
+#
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
